# multiview

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  BM25_VIZ_FIX.md  DATA_PLAN_C.md  DETERMINISM_FIX.md  PLAN_SYNTH_DOCS.md  README-dev.md  README.md  ROADMAP.md  SCHEMA_COMPARISON.md  TASKS_TABLE.md  TODO.md  VISUALIZATION.md  VISUALIZER_FIXES.md  pyproject.toml
archive/: BM25_DATA_AVAILABLE_FIX.md  BM25_VIZ_FIX_PART2.md  CACHING.md  HOW_VISUALIZER_WORKS.md  MISSING_FEATURES.md  NITS.md  TRIPLET_GRAPH_FEATURE.md  VISUALIZER_FIX.md
configs/: available_criteria.yaml  benchmark.yaml  benchmark_0125.yaml  benchmark_256.yaml  benchmark_abstractsim.yaml  benchmark_analogies.yaml  benchmark_cari_100.yaml  benchmark_crossword_100.yaml  benchmark_cw.yaml  benchmark_d5.yaml  benchmark_d5_100.yaml  benchmark_dickinson_100.yaml  benchmark_discrete.yaml  benchmark_fuzzy.yaml  benchmark_fuzzy2.yaml  benchmark_fuzzy_debug.yaml  benchmark_fuzzy_debug2.yaml  benchmark_gsm8k_100.yaml  benchmark_gsm8k_schema_comparison.yaml  benchmark_haiku_100.yaml  benchmark_hn_100.yaml  benchmark_met_100.yaml  benchmark_met_museum.yaml  benchmark_methods.yaml  benchmark_mmlu_100.yaml  benchmark_moralfables.yaml  benchmark_multifaceted_example.yaml  benchmark_nycc_100.yaml  benchmark_onion_100.yaml  benchmark_prelabeled.yaml  benchmark_schema_comparison.yaml  benchmark_specialized.yaml  benchmark_wec_100.yaml  benchmark_zappos_100.yaml  corpus_cari_aesthetics.yaml  corpus_new_yorker_covers.yaml  corpus_whole_earth_catalog.yaml  test_annotation_output.yaml  test_dev.yaml  test_quality_comparison.yaml  (+5 more)
examples/: example_graph.json  gsm8k_viz_quickstart.py  vlm_usage.py
scripts/: add_triplet_embeddings.py  analyze_corpus.py  create_eval.py  download_cari_images.py  generate_task_table.py  list_task_variants.py  run_eval.py  test_quality_comparison.py  tune_landmarks.py  tune_rewriter.py  visualize_corpus.py
src/multiview/: README.md  __init__.py  constants.py
tests/: README.md  __init__.py  conftest.py
tests/benchmark/: test_annotation_integration.py  test_annotation_utils.py  test_annotations.py  test_bm25_utils.py  test_class_schema.py  test_config_suffix.py  test_task.py  (+10 more)
todo/: ROADMAP.md  a0-taxonomy.md  a1-comparison_plots.md  d-more_methods.md  f-scale_leaderboard.md  next.md  zcut.md
visualizer/: NEW_FEATURES.md  README.md  THUMBNAIL_SUPPORT.md  compare.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
writeup/: WRITEUP.md  trash.md
(+323 files in other folders)
